k8s/base/patches/deployments-springboot-size-xs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: main
          resources:
            requests:
              memory: "384Mi"
            limits:
              memory: "384Mi"
