k8s/base/patches/services-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: not-important
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
