k8s/base/patches/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-important
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
